test/official_tests/super/missing_arguments.lox
class Base {
  foo(a, b) {
    print "Base.foo(" + a + ", " + b + ")";
  }
}

class Derived < Base {
  foo() {
    super.foo(1); // error: {"line":9,"message":"Function 'Base::foo' expected 2 arguments but got 1","type":"RuntimeError"}
  }
}

Derived().foo();
